# flake8-pyi

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  ERRORCODES.md  MANIFEST.in  README.md  README.rst  pyi.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug.md  docs.md  feature.md
.github/scripts/: typeshed_primer_download_errors.js  typeshed_primer_post_comment.js
.github/workflows/: check.yml  publish.yml  typeshed_primer.yml  typeshed_primer_comment.yml
flake8_pyi/: __init__.py  checker.py  errors.py  visitor.py
tests/: F822.pyi  __all__.pyi  aliases.pyi  attribute_annotations.pyi  attribute_annotations_strict.pyi  bad_callbacks.pyi  calls.pyi  classdefs.pyi  comparisons.pyi  defaults.pyi  defaults_py38.pyi  definitions.pyi  del.pyi  disabled_by_default.pyi  emptyclasses.pyi  emptyfunctions.pyi  emptyinit.pyi  exit_methods.pyi  f_strings.pyi  forward_refs.pyi  forward_refs_annassign.pyi  imports.pyi  incomplete.pyi  literals.pyi  names_requiring_values.pyi  never_vs_noreturn.pyi  override.pyi  paramspec.pyi  pep570.pyi  pep604_union_types.pyi  pep646_py311.pyi  pep695_py312.pyi  precise_import_linenos.pyi  protocol_arg.pyi  pseudo_protocols.pyi  py_file_definitions.py  quotes.pyi  raise.pyi  single_element_tuples.pyi  sysplatform.pyi  (+10 more)
