[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-pyi"
dynamic = ["version"]
authors = [
  { name="Åukasz Langa", email="=lukasz@langa.pl" },
]
maintainers = [
  { name="Jelle Zijlstra", email="jelle.zijlstra@gmail.com" },
  { name="Alex Waygood", email="alex.waygood@gmail.com" },
  { name="Sebastian Rittau" },
  { name="Akuli" },
  { name="Shantanu" },
]
description = "A plugin for flake8 to enable linting .pyi stub files."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "flake8",
    "pyi",
    "bugs",
    "pyflakes",
    "linter",
    "qa",
    "stubs",
    "typing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "flake8 >= 6.0.0, < 7.0.0",
    "pyflakes >= 2.1.1",
    "ast-decompiler >= 0.7.0, < 1.0; python_version < '3.9'",
]

[project.urls]
"Homepage" = "https://github.com/PyCQA/flake8-pyi"
"Source" = "https://github.com/PyCQA/flake8-pyi"
"Bug Tracker" = "https://github.com/PyCQA/flake8-pyi/issues"
"Changelog" = "https://github.com/PyCQA/flake8-pyi/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black==23.9.1",            # Must match .pre-commit-config.yaml
    "flake8-bugbear==23.9.16",
    "flake8-noqa==1.3.2",
    "isort==5.12.0",            # Must match .pre-commit-config.yaml
    "mypy==1.6.0",
    "pre-commit-hooks==4.5.0",  # Must match .pre-commit-config.yaml
    "pytest==7.4.2",
    "types-pyflakes<4",
]

[project.entry-points]
"flake8.extension" = {Y0 = "pyi:PyiTreeChecker"}

[tool.hatch.version]
path = "pyi.py"

[tool.isort]
profile = "black"
combine_as_imports = true
skip = ["tests/imports.pyi"]
skip_gitignore = true

[tool.black]
target-version = ['py38']
skip-magic-trailing-comma = true
force-exclude = ".*\\.pyi"

[tool.mypy]
files = ["pyi.py", "tests/test_pyi_files.py"]
show_traceback = true
pretty = true
strict = true
enable_error_code = "ignore-without-code,redundant-expr,possibly-undefined"
warn_unreachable = true
allow_subclassing_any = true

[[tool.mypy.overrides]]
module = 'flake8.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
filterwarnings = ["error"]
